--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: space-around;
     font-family: 'Baloo Bhaina 2', cursive;
+    height: 852px;
 }
 
-.column1, .column2, .column3 {
+.column2, .column3 {
     border: 1px solid black;
-    height: 852px;
 }
 
 .column1 {
