--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+body {
+    font-family: 'Baloo Bhaina 2', cursive;
+    margin: 0;
+    padding: 0;
+}
+
 .container {
+    margin-top: 24px;
     display: flex;
     justify-content: space-around;
-    font-family: 'Baloo Bhaina 2', cursive;
-    height: 852px;
+    min-height: 852px;
 }
 
 .column2, .column3 {
@@ -18,6 +24,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: space-between;
+box-shadow: 15px 10px 40px gray;
 }
 
 .column2 {
