--- a/style.css
+++ b/style.css
@@ -26,11 +26,13 @@ height: 852px;
 }
 
 .column2 {
+    margin-left: 30px;
     width: 45%;
     min-width: 620px;
 }
 
 .column3 {
+    margin-left: 30px;
     width: 30%;
     min-width:440px;
 }
@@ -442,4 +444,8 @@ font-size: 16px;
 line-height: 24px;
 font-family: Roboto;
 margin-bottom: 24px;
+}
+
+.graph img {
+
 }
