--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ font-family: Roboto;
 
 .title1 {
     font-size: 16px;
-    line-height: 26px;
+    line-height: 20px;
 }
 
 .title2 {
@@ -244,6 +244,10 @@ left: -12px;
 
 .courses div:nth-of-type(4) {
     width: 40px;
+}
+
+.clock {
+    margin-left: 5px;
 }
 
 .clock, .fire {
